ubah link project

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
     </section>
 
-    <section id="experience">
+    <section id="project">
         <h1 class="title">My Project</h1>
 
     </section>
