--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <section id="profile">
         <div class="section-pic">
-            <img src="img/profile.png" alt="">
+            <img src="img/09917.jpg" alt="">
         </div>
         <div class="section-text">
             <p class="section-p1">Hello! I'm</p>
@@ -51,14 +51,41 @@
             <div class="about-detail-container">
                 <div class="about-container">
                     <div class="detail-container">
-                        <h3>Experience</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                        </p>    
+                        <h3>Experience</h3>   
+                        <ul>
+                            <li>Pembuatan Portfolio Website, menggunakan HTML & CSS</li>
+                            <li>Pembuatan Webshop, menggunakan HTML & CSS</li>
+                            <li>Pengembangan Sistem Kalkulasi Harga Bahan Bakar Berbasis Web, menggunakan PHP (OOP)</li>
+                            <li>Pengembangan Sistem Kalkulasi Harga Rental Motor Berbasis Web, menggunakan PHP (OOP)</li>
+                            <li> Pengembangan Website Pengelolaan Data Siswa, menggunakan PHP (OOP)</li>
+                            <li>Pembuatan Website Apotek dengan Fitur CRUD, menggunakan Framework Laravel</li>
+                            <li>Pembuatan Website Planner (manajemen tugas) dengan Fitur CRUD, menggunakan Framework Laravel</li>
+                            <li>Dicoding, Belajar Dasar Pemrograman Web</li>
+                            <li>Dicoding, Memulai Pemrograman Dengan Java</li>
+                            <li>Pelatihan IBM Skills Builds, Web Development Fundamentals</li>
+                        </ul>
                     </div>
                     <div class="detail-container">
                         <h3>Education</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                        </p>    
+                        <ol>
+                            <li>
+                                SMP Negeri 2 Cisarua
+                                <p>2020-2023</p>
+                            </li><br>
+                            <li>
+                                SMK Wikrama Bogor
+                                <p>2023-2026</p>
+                            </li>
+                        </ol><br><hr><br>
+                        <h3>Skills</h3>
+                        <ol>
+                            <li>Pemrograman (HTML, CSS, JavaScript, PHP)</li>
+                            <li>Manajemen Database (MySQL)</li>
+                            <li>Microsoft Office</li>
+                            <li>Aplikasi pendukung kerja tim : Github, Trello</li>
+                            <li>Dokumentasi teknis</li>
+                            <li>Kemampuan menganalisis</li>
+                        </ol>
                     </div>
                 </div>
             </div>
@@ -77,11 +104,11 @@
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
                 <img src="img/email.png" alt="" class="icon contact-icon">
-                <p><a href="mailto:nadia@gmail.com">nadia@gmail.com</a></p>
+                <p><a href="mailto:nadia0712@gmail.com">nadiadp0712@gmail.com</a></p>
             </div>
             <div class="contact-info-container">
                 <img src="img/ig.png" alt="" class="icon contact-icon">
-                <p><a href="@nadiadwipratiwii">Instagram</a></p>
+                <p><a href="https://www.instagram.com/nadiadwipratiwii/">Instagram</a></p>
             </div>
         </div>
     </section>
